# Recall-ai

./: .gitignore  CHECKLIST-REPORT.md  LICENSE  README.md  Recall-ai-plan.md  install.ps1  install.sh  manage.ps1  manage.sh  pyproject.toml  start.ps1  start.sh  test_all.py
docs/: CONFIG-AUDIT-REPORT.md  FEATURE-STATUS.md  LONGTERM-STABILITY-AUDIT-v7.0.10.md  MCP-SETUP.md  MODULE-ANALYSIS-REPORT.md  MODULE-DEEP-ANALYSIS-REPORT.md  PROMISE-AUDIT-REPORT.md  PROMISE-COMPLIANCE-REPORT-v7.0.11.md  RECALL-7.0-AUDIT-REPORT.md  TEST-AND-CONFIG-ANALYSIS-REPORT.md
docs/plans/: CHECKLIST-REPORT.md  COMPREHENSIVE-FIX-PLAN.md  GraphitiAnalysis.md  MCP-PLAN.md  NAMING-REFACTOR-PLAN.md  PERFORMANCE-OPTIMIZATION-PLAN.md  RECALL-5.0-UNIVERSAL-PLAN.md  RECALL-7.0-LONGTERM-EVALUATION.md  Recall-3.0-COMPREHENSIVE-FIX-PLAN.md  Recall-3.0-Orignal-Plan.md  Recall-4.0-ARCHITECTURE-ANALYSIS.md  Recall-4.0-Upgrade-Plan.md  Recall-7.0-UNIVERSAL-MEMORY-PLAN.md  Recall-ai-plan.md  Recall4.0AdditionUpgradePlan.md  RulesEnginePlan.md  TRENDHUNTER-CRITICAL-ANALYSIS.md  semantic-dedup-implementation.md
plugins/sillytavern/: index.js  install.ps1  install.sh  manifest.json  style.css
recall/: __init__.py  __main__.py  cli.py  config.py  config_template.env  config_validator.py  context_build.py  engine.py  i18n.py  init.py  lifecycle.py  mcp_server.py  memory_ops.py  mode.py  server.py  version.py
recall/backends/: __init__.py  es_fulltext.py  factory.py  interfaces.py  nebula_graph.py  pg_memory.py  qdrant_vector.py  sqlite_fts.py  sqlite_memory.py  sqlite_vector.py
recall/cache/: __init__.py  redis_cache.py
recall/compat/: __init__.py  mem0_compat.py
recall/embedding/: __init__.py  api_backend.py  base.py  factory.py  local_backend.py
recall/graph/: __init__.py  community_detector.py  contradiction_manager.py  knowledge_graph.py  llm_relation_extractor.py  query_planner.py  relation_extractor.py  temporal_knowledge_graph.py
recall/index/: __init__.py  entity_index.py  fulltext_index.py  inverted_index.py  metadata_index.py  ngram_index.py  temporal_index.py  (+3 more)
test_config_reload/: api_keys.env
tests/: __init__.py  conftest.py  manual_test.py  quick_func_test.py  test.py  test_absolute_rules.py  test_absolute_rules_e2e.py  test_comprehensive.py  test_context_system.py  test_delete_cascade.py  test_eleven_layer.py  test_embedding_modes.py  test_foreshadowing.py  test_foreshadowing_analyzer.py  test_full_user_flow.py  test_growth_control.py  test_ivf_hnsw_recall.py  test_kuzu_demo.py  test_phase.py  test_phase1_3.py  test_phase2.py  test_recall_full.py  test_retrieval_benchmark.py  test_rrf_fusion.py  test_search.py  test_semantic_dedup.py  test_simulation.py  test_stress.py  test_v41_features.py  test_v50_bugfixes.py  test_v701_fixes.py  test_v70_dead_paths.py  test_v70_expanded.py  test_v70_smoke.py  test_zero_tolerance.py  verify_session_fixes.py
tools/: chat_with_recall.py  check_v41.py  dedup_templates.py  diagnose_entity.py  final_config_check.py  inspect_graph.py  migrate_data.py  migrate_ivf_to_hnsw.py  migrate_json_to_sqlite.py  migrate_v3_to_v4.py  rebuild_relations.py  test_chat_clear.py  test_context_clean.py  test_deep_delete.py  verify_config.py
(+93 files in other folders)
